maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: not found: value marquerBaggle
  marquerBaggle(0,0);
  ^